// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DevelopersTable should render component with developers 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <div
        class="el-mb11"
      >
        <h2
          class="el-subtitle"
        >
          Total Developers
        </h2>
        <p
          class="el-has-grey-text el-body-text"
        >
          1
        </p>
        <div
          class="el-table"
          data-has-call-to-action="false"
          data-has-expandable-action="true"
          data-num-columns-excl-action-col="7"
        >
          <div
            class="el-table-headers-row"
          >
            <div
              class="el-table-header"
            >
              Company Name
            </div>
            <div
              class="el-table-header"
            >
              Developer Name
            </div>
            <div
              class="el-table-header"
            >
              Developer Email
            </div>
            <div
              class="el-table-header"
            >
              Job Title
            </div>
            <div
              class="el-table-header"
            >
              Account Status
            </div>
            <div
              class="el-table-header"
            >
              Created Date
            </div>
            <div
              class="el-table-header"
            >
              Agreed Terms Date
            </div>
            <div
              class="el-table-header"
            >
              <span
                class="el-icon"
                style="font-size: 1.2rem;"
              >
                <svg />
              </span>
            </div>
          </div>
          <div
            class="el-table-row-container"
          >
            <div
              class="el-table-row"
            >
              <div
                class="el-table-cell-has-dark-text el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Company Name"
                >
                  Reapit Sales
                </div>
              </div>
              <div
                class="el-table-cell-has-dark-text el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Developer Name"
                >
                  Sales Team
                </div>
              </div>
              <div
                class="el-table-cell-has-dark-text el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Developer Email"
                >
                  test@example.com
                </div>
              </div>
              <div
                class="el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Job Title"
                />
              </div>
              <div
                class="el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Account Status"
                >
                  confirmed
                </div>
              </div>
              <div
                class="el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Created Date"
                >
                  03 Mar 2022 10:18
                </div>
              </div>
              <div
                class="el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Agreed Terms Date"
                >
                  -
                </div>
              </div>
              <div
                class="el-table-expandable-row-trigger-cell"
              >
                <span
                  class="el-intent-secondary el-icon"
                >
                  <svg />
                </span>
              </div>
            </div>
            <div
              class="el-table-expandable-row"
            >
              <div
                class="el-table-expandable-container"
              >
                <div
                  class="el-button-group"
                >
                  <div
                    class="el-button-group-align-center el-button-group-inner"
                  >
                    <button
                      class="el-intent-primary el-button"
                      disabled=""
                      type="button"
                    >
                      Update Status
                      <div
                        class="el-button-loader"
                      />
                    </button>
                    <button
                      class="el-intent-primary el-button"
                      disabled=""
                      type="button"
                    >
                      DevEdition is Free
                      <div
                        class="el-button-loader"
                      />
                    </button>
                    <button
                      class="el-intent-primary el-button"
                      disabled=""
                    >
                      Toggle Subscription 
                      <div
                        class="el-button-loader"
                      />
                    </button>
                    <button
                      class="el-intent-primary el-button"
                      disabled=""
                    >
                      Invite Member
                      <div
                        class="el-button-loader"
                      />
                    </button>
                    <button
                      class="el-intent-secondary el-button"
                    >
                      Fetch Members
                      <div
                        class="el-button-loader"
                      />
                    </button>
                    <button
                      class="el-intent-secondary el-button"
                    >
                      Fetch Apps
                      <div
                        class="el-button-loader"
                      />
                    </button>
                    <button
                      class="el-intent-danger el-button"
                      disabled=""
                      type="button"
                    >
                      Delete Developer
                      <div
                        class="el-button-loader"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <div
      class="el-mb11"
    >
      <h2
        class="el-subtitle"
      >
        Total Developers
      </h2>
      <p
        class="el-has-grey-text el-body-text"
      >
        1
      </p>
      <div
        class="el-table"
        data-has-call-to-action="false"
        data-has-expandable-action="true"
        data-num-columns-excl-action-col="7"
      >
        <div
          class="el-table-headers-row"
        >
          <div
            class="el-table-header"
          >
            Company Name
          </div>
          <div
            class="el-table-header"
          >
            Developer Name
          </div>
          <div
            class="el-table-header"
          >
            Developer Email
          </div>
          <div
            class="el-table-header"
          >
            Job Title
          </div>
          <div
            class="el-table-header"
          >
            Account Status
          </div>
          <div
            class="el-table-header"
          >
            Created Date
          </div>
          <div
            class="el-table-header"
          >
            Agreed Terms Date
          </div>
          <div
            class="el-table-header"
          >
            <span
              class="el-icon"
              style="font-size: 1.2rem;"
            >
              <svg />
            </span>
          </div>
        </div>
        <div
          class="el-table-row-container"
        >
          <div
            class="el-table-row"
          >
            <div
              class="el-table-cell-has-dark-text el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Company Name"
              >
                Reapit Sales
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Developer Name"
              >
                Sales Team
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Developer Email"
              >
                test@example.com
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Job Title"
              />
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Account Status"
              >
                confirmed
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Created Date"
              >
                03 Mar 2022 10:18
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Agreed Terms Date"
              >
                -
              </div>
            </div>
            <div
              class="el-table-expandable-row-trigger-cell"
            >
              <span
                class="el-intent-secondary el-icon"
              >
                <svg />
              </span>
            </div>
          </div>
          <div
            class="el-table-expandable-row"
          >
            <div
              class="el-table-expandable-container"
            >
              <div
                class="el-button-group"
              >
                <div
                  class="el-button-group-align-center el-button-group-inner"
                >
                  <button
                    class="el-intent-primary el-button"
                    disabled=""
                    type="button"
                  >
                    Update Status
                    <div
                      class="el-button-loader"
                    />
                  </button>
                  <button
                    class="el-intent-primary el-button"
                    disabled=""
                    type="button"
                  >
                    DevEdition is Free
                    <div
                      class="el-button-loader"
                    />
                  </button>
                  <button
                    class="el-intent-primary el-button"
                    disabled=""
                  >
                    Toggle Subscription 
                    <div
                      class="el-button-loader"
                    />
                  </button>
                  <button
                    class="el-intent-primary el-button"
                    disabled=""
                  >
                    Invite Member
                    <div
                      class="el-button-loader"
                    />
                  </button>
                  <button
                    class="el-intent-secondary el-button"
                  >
                    Fetch Members
                    <div
                      class="el-button-loader"
                    />
                  </button>
                  <button
                    class="el-intent-secondary el-button"
                  >
                    Fetch Apps
                    <div
                      class="el-button-loader"
                    />
                  </button>
                  <button
                    class="el-intent-danger el-button"
                    disabled=""
                    type="button"
                  >
                    Delete Developer
                    <div
                      class="el-button-loader"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`DevelopersTable should render component with no developers 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <div
        class="el-mb11"
      >
        <div
          class="el-intent-secondary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
        >
          <div
            class="el-pn-icon"
            data-testid="close-icon"
          >
            <span
              class="el-icon"
            >
              <svg />
            </span>
          </div>
          <div
            class="el-pn-content"
          >
            No results found for your selected filters
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <div
      class="el-mb11"
    >
      <div
        class="el-intent-secondary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
      >
        <div
          class="el-pn-icon"
          data-testid="close-icon"
        >
          <span
            class="el-icon"
          >
            <svg />
          </span>
        </div>
        <div
          class="el-pn-content"
        >
          No results found for your selected filters
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
